--- a/package.json
+++ b/package.json
@@ -56,5 +56,8 @@
     "webpack": "^1.13.3",
     "webpack-dashboard": "^0.2.0",
     "webpack-dev-server": "^1.16.2"
+  },
+  "dependencies": {
+    "idb-keyval": "^2.2.0"
   }
 }
