--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "Next generation api mocker.",
   "main": "dist/index.js",
   "scripts": {
-    "lint": "eslint .",
+    "lint": "tslint -t stylish '{src, demo}/**/*.ts'",
     "clean:build": "rimraf ./build",
     "clean:dist": "rimraf ./dist",
     "predist": "npm run clean:dist",
     "dist": "webpack --config ./webpack/production.js --display-error-details --color",
     "preghpages": "npm run clean:build",
     "ghpages": "webpack --config ./webpack/ghpages.js --display-error-details --color",
-    "start": "node serve.js",
+    "start": "node ./webpack/serve.js",
     "pretest": "npm run lint",
     "test": "webpack --config ./webpack/test.js --display-error-details --color"
   },
@@ -32,21 +32,8 @@
   "homepage": "https://github.com/idiotWu/service-mocker#readme",
   "devDependencies": {
     "autoprefixer": "^6.5.3",
-    "babel-core": "^6.18.2",
-    "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.2.8",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-preset-latest": "^6.16.0",
-    "babel-preset-stage-0": "^6.16.0",
+    "awesome-typescript-loader": "^3.0.0-beta.10",
     "circular-dependency-plugin": "^2.0.0",
-    "eslint": "^3.11.1",
-    "eslint-config-standard": "^6.2.1",
-    "eslint-friendly-formatter": "^2.0.6",
-    "eslint-loader": "^1.6.1",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-promise": "^3.4.0",
-    "eslint-plugin-standard": "^2.0.1",
     "ip": "^1.1.4",
     "node-sass": "^3.13.0",
     "postcss-loader": "^1.1.1",
@@ -54,6 +41,11 @@
     "rimraf": "^2.5.4",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
+    "ts-loader": "^1.3.0",
+    "tslint": "^4.0.2",
+    "tslint-config-standard": "^2.0.0",
+    "tslint-loader": "^3.3.0",
+    "typescript": "^2.1.4",
     "webpack": "^1.13.3",
     "webpack-dashboard": "^0.2.0",
     "webpack-dev-server": "^1.16.2",
