--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,14 @@
         "dom",
         "es2017"
     ],
-    "noUnusedParameters": true,
-    "noUnusedLocals": true
-  }
+    "target": "ES5",
+    "noUnusedLocals": true,
+    "experimentalDecorators": true,
+    "declaration": true,
+    "outDir": "dist"
+  },
+  "include": [
+    "src/**/*.ts",
+    "typings/**/*.ts"
+  ]
 }
