--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "moduleResolution": "node",
     "noImplicitReturns": true,
     "noUnusedLocals": true,
+    "importHelpers": true,
     "declaration": true,
     "sourceMap": true,
     "outDir": "dist"
