update: update tsc workflow

--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "service-mocker",
   "version": "0.0.1",
   "description": "Next generation api mocker.",
-  "main": "dist/index.js",
-  "typings": "dist/index.d.ts",
+  "main": "lib/index.js",
+  "typings": "lib/index.d.ts",
   "scripts": {
     "lint": "tslint -t stylish '{src, demo}/**/*.ts'",
     "clean:build": "rimraf ./build",
-    "clean:dist": "rimraf ./dist",
+    "clean:dist": "rimraf ./lib",
     "predist": "npm run clean:dist",
-    "dist": "webpack --config ./webpack/production.js --display-error-details --color",
+    "dist": "tsc -p tsconfig.prod.json",
     "preghpages": "npm run clean:build",
     "ghpages": "webpack --config ./webpack/ghpages.js --display-error-details --color",
     "start": "node ./webpack/serve.js",
