fix(tsc): fix tsconfig.prod.json

--- a/tsconfig.prod.json
+++ b/tsconfig.prod.json
@@ -2,7 +2,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "importHelpers": true,
-    "outDir": "lib",
+    "outDir": "lib"
   },
   "include": [
     "src/**/*.ts",
