--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
   "scripts": {
     "lint": "tslint -t stylish '{src, demo}/**/*.ts'",
     "clean:build": "rimraf ./build",
-    "clean:dist": "rimraf ./lib",
-    "predist": "npm run clean:dist",
-    "dist": "tsc -p tsconfig.prod.json",
+    "clean:compile": "rimraf ./lib",
+    "clean:release": "rimraf ./dist",
+    "precompile": "npm run clean:compile",
+    "compile": "tsc -p tsconfig.prod.json",
+    "prerelease": "npm run clean:release",
+    "release": "node ./scripts/release",
     "preghpages": "npm run clean:build",
     "ghpages": "webpack --config ./webpack/ghpages.js --display-error-details --color",
     "start": "node ./webpack/serve.js",
@@ -40,6 +43,7 @@
     "promise-polyfill": "^6.0.2",
     "rimraf": "^2.5.4",
     "sass-loader": "^4.0.2",
+    "shelljs": "^0.7.5",
     "style-loader": "^0.13.1",
     "ts-loader": "^1.3.0",
     "tslint": "^4.0.2",
@@ -54,5 +58,13 @@
   "dependencies": {
     "localforage": "^1.4.3",
     "tslib": "^1.2.0"
-  }
+  },
+  "files": [
+    "src/",
+    "lib/",
+    "package.json",
+    "typings.json",
+    "README.md",
+    "LICENSE"
+  ]
 }
