--- a/.editorconfig
+++ b/.editorconfig
@@ -3,8 +3,10 @@ root = true
 
 # Unix-style newlines with a newline ending every file
 [*]
+charset = utf-8
 end_of_line = lf
 insert_final_newline = true
+trim_trailing_whitespace = true
 
 # indent
 [*.{js, ts, scss}]
