--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "clean:build": "rimraf ./build",
     "clean:compile": "rimraf ./lib",
     "clean:release": "rimraf ./dist",
-    "precompile": "npm run clean:compile",
+    "clean": "npm run clean:build & npm run clean:compile & npm run clean:release",
     "compile": "tsc -p tsconfig.prod.json",
-    "prerelease": "npm run clean:release",
-    "release": "node ./scripts/release",
+    "release": "./scripts/release.sh",
+    "release:entry": "node ./scripts/add-entry.js",
     "preghpages": "npm run clean:build",
     "ghpages": "webpack --config ./webpack/ghpages.js --display-error-details --color",
     "start": "node ./scripts/serve.js",
@@ -43,7 +43,6 @@
     "promise-polyfill": "^6.0.2",
     "rimraf": "^2.5.4",
     "sass-loader": "^4.0.2",
-    "shelljs": "^0.7.5",
     "style-loader": "^0.13.1",
     "ts-loader": "^1.3.0",
     "tslint": "^4.0.2",
@@ -58,13 +57,5 @@
   "dependencies": {
     "localforage": "^1.4.3",
     "tslib": "^1.2.0"
-  },
-  "files": [
-    "src/",
-    "lib/",
-    "package.json",
-    "typings.json",
-    "README.md",
-    "LICENSE"
-  ]
+  }
 }
