--- a/package.json
+++ b/package.json
@@ -37,10 +37,10 @@
   "devDependencies": {
     "autoprefixer": "^6.5.3",
     "circular-dependency-plugin": "^2.0.0",
+    "es6-promise": "^4.0.5",
     "ip": "^1.1.4",
     "node-sass": "^3.13.0",
     "postcss-loader": "^1.1.1",
-    "promise-polyfill": "^6.0.2",
     "rimraf": "^2.5.4",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
