--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   },
   "dependencies": {
     "localforage": "^1.4.3",
-    "tslib": "^1.2.0"
+    "tslib": "^1.2.0",
+    "url": "^0.11.0"
   }
 }
