--- a/package.json
+++ b/package.json
@@ -36,13 +36,18 @@
   "homepage": "https://github.com/idiotWu/service-mocker#readme",
   "devDependencies": {
     "autoprefixer": "^6.5.3",
+    "chai": "^3.5.0",
     "circular-dependency-plugin": "^2.0.0",
+    "css-loader": "^0.26.1",
     "es6-promise": "^4.0.5",
     "ip": "^1.1.4",
-    "node-sass": "^3.13.0",
-    "postcss-loader": "^1.1.1",
+    "karma": "^1.3.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-mocha": "^1.3.0",
+    "mocha": "^3.2.0",
+    "mocha-loader": "^1.0.0",
+    "postcss-loader": "^1.2.1",
     "rimraf": "^2.5.4",
-    "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "ts-loader": "^1.3.0",
     "tslint": "^4.0.2",
