--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "mocha-loader": "^1.0.0",
     "postcss-loader": "^1.2.1",
     "rimraf": "^2.5.4",
+    "source-map-support": "^0.4.8",
     "style-loader": "^0.13.1",
     "ts-loader": "^1.3.0",
     "tslint": "^4.0.2",
