--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "circular-dependency-plugin": "^2.0.0",
     "css-loader": "^0.26.1",
     "es6-promise": "^4.0.5",
+    "html-webpack-plugin": "^2.24.1",
     "ip": "^1.1.4",
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
