--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "typings": "index.d.ts",
   "scripts": {
-    "lint": "tslint -t stylish '{src, demo}/**/*.ts'",
+    "lint": "tslint -t stylish -e '**/*.d.ts' '{src, demo}/**/*.ts'",
     "clean:build": "rimraf ./build",
     "clean:compile": "rimraf ./lib",
     "clean:release": "rimraf ./dist",
@@ -17,7 +17,7 @@
     "ghpages": "webpack --config ./webpack/ghpages.js --display-error-details --color",
     "start": "node ./scripts/serve.js",
     "pretest": "npm run lint",
-    "test": "webpack --config ./webpack/test.js --display-error-details --color"
+    "test": "karma start ./scripts/karma.config.base.js"
   },
   "repository": {
     "type": "git",
@@ -45,6 +45,10 @@
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-mocha": "^1.3.0",
+    "karma-mocha-reporter": "^2.2.1",
+    "karma-remap-coverage": "^0.1.4",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^1.8.1",
     "mocha": "^3.2.0",
     "mocha-loader": "^1.0.0",
     "postcss-loader": "^1.2.1",
