--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
     "clean:build": "rimraf ./build",
     "clean:compile": "rimraf ./lib",
     "clean:release": "rimraf ./dist",
-    "clean": "npm run clean:build & npm run clean:compile & npm run clean:release",
+    "clean": "npm-run-all clean:build clean:compile clean:release",
     "compile": "tsc -p tsconfig.prod.json",
     "release": "./scripts/release.sh",
     "release:entry": "node ./scripts/add-entry.js",
     "preghpages": "npm run clean:build",
     "ghpages": "webpack --config ./webpack/ghpages.js --display-error-details --color",
     "start": "node ./scripts/serve.js",
-    "pretest": "npm run lint",
-    "test": "karma start ./scripts/karma.config.base.js"
+    "pretest:dev": "npm run lint",
+    "test:dev": "npm-run-all test:modern test:legacy",
+    "test:modern": "cross-env karma start ./scripts/karma.config.dev.js",
+    "test:legacy": "cross-env FORCE_LEGACY=true karma start ./scripts/karma.config.dev.js"
   },
   "repository": {
     "type": "git",
@@ -37,6 +39,7 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "circular-dependency-plugin": "^2.0.0",
+    "cross-env": "^3.1.3",
     "es6-promise": "^4.0.5",
     "html-webpack-plugin": "^2.24.1",
     "ip": "^1.1.4",
@@ -49,6 +52,7 @@
     "karma-webpack": "^1.8.1",
     "mocha": "^3.2.0",
     "mocha-loader": "^1.0.0",
+    "npm-run-all": "^3.1.2",
     "rimraf": "^2.5.4",
     "source-map-support": "^0.4.8",
     "ts-loader": "^1.3.0",
