--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
         "es2017"
     ],
     "moduleResolution": "node",
+    "noUnusedParameters": true,
     "noImplicitReturns": true,
     "strictNullChecks": true,
     "noUnusedLocals": true,
