--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "start": "node ./scripts/serve.js",
     "pretest": "npm run lint",
     "test": "npm-run-all --parallel test:modern test:legacy",
+    "test:full": "karma start ./scripts/karma.config.full.js",
     "test:modern": "cross-env karma --port 9876 start ./scripts/karma.config.dev.js",
     "test:legacy": "cross-env FORCE_LEGACY=true karma --port 9877 start ./scripts/karma.config.dev.js"
   },
@@ -42,9 +43,11 @@
     "ip": "^1.1.4",
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
+    "karma-firefox-launcher": "^1.0.0",
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.1",
     "karma-remap-coverage": "^0.1.4",
+    "karma-safari-launcher": "^1.0.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.8.1",
     "mocha": "^3.2.0",
