--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "noUnusedLocals": true,
     "importHelpers": true,
     "declaration": true,
-    "inlineSourceMap": true
+    "sourceMap": true
   },
   "exclude": [
     "node_modules",
