--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "mocha-loader": "^1.0.0",
     "npm-run-all": "^3.1.2",
     "rimraf": "^2.5.4",
-    "source-map-support": "^0.4.8",
+    "source-map-support": "git+https://github.com/service-mocker/node-source-map-support.git",
     "ts-loader": "^1.3.0",
     "tslint": "^4.0.2",
     "tslint-config-standard": "^2.0.0",
