--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "start": "node ./scripts/serve.js",
     "pretest": "npm run lint",
     "test": "npm-run-all --parallel test:modern test:legacy",
-    "test:full": "karma start ./scripts/karma.config.full.js",
     "test:modern": "cross-env karma --port 9876 start ./scripts/karma.config.dev.js",
-    "test:legacy": "cross-env FORCE_LEGACY=true karma --port 9877 start ./scripts/karma.config.dev.js"
+    "test:legacy": "cross-env FORCE_LEGACY=true karma --port 9877 start ./scripts/karma.config.dev.js",
+    "test:full": "karma start ./scripts/karma.config.full.js",
+    "test:cover": "cross-env FORCE_LEGACY=true karma start ./scripts/karma.config.cover.js"
   },
   "repository": {
     "type": "git",
@@ -47,6 +48,7 @@
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.1",
     "karma-remap-coverage": "^0.1.4",
+    "karma-remap-istanbul": "^0.4.0",
     "karma-safari-launcher": "^1.0.0",
     "karma-sauce-launcher": "^1.1.0",
     "karma-sourcemap-loader": "^0.3.7",
@@ -56,6 +58,7 @@
     "npm-run-all": "^3.1.2",
     "rimraf": "^2.5.4",
     "source-map-support": "git+https://github.com/service-mocker/node-source-map-support.git",
+    "sourcemap-istanbul-instrumenter-loader": "^0.2.0",
     "ts-loader": "^1.3.0",
     "tslint": "^4.0.2",
     "tslint-config-standard": "^2.0.0",
