add(test/cover): combine coverage

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "clean:build": "rimraf ./build",
     "clean:compile": "rimraf ./lib",
     "clean:release": "rimraf ./dist",
-    "clean": "npm-run-all clean:build clean:compile clean:release",
+    "clean:cover": "rimraf ./coverage",
+    "clean": "npm-run-all clean:build clean:compile clean:release clean:cover",
     "compile": "tsc -p tsconfig.prod.json",
     "release": "./scripts/release.sh",
     "start": "node ./scripts/serve.js",
@@ -18,8 +19,12 @@
     "test:modern": "cross-env karma --port 9876 start ./scripts/karma.config.dev.js",
     "test:legacy": "cross-env FORCE_LEGACY=true karma --port 9877 start ./scripts/karma.config.dev.js",
     "test:full": "karma start ./scripts/karma.config.full.js",
-    "test:cover": "cross-env FORCE_LEGACY=true karma start ./scripts/karma.config.cover.js",
-    "test:sauce": "karma start ./scripts/karma.config.sauce.js"
+    "test:sauce": "karma start ./scripts/karma.config.sauce.js",
+    "precover": "npm run clean:cover",
+    "cover": "npm-run-all cover:modern cover:legacy cover:combine",
+    "cover:combine": "node ./scripts/combine-coverage.js",
+    "cover:modern": "karma start ./scripts/karma.config.cover.js",
+    "cover:legacy": "cross-env FORCE_LEGACY=true karma start ./scripts/karma.config.cover.js"
   },
   "repository": {
     "type": "git",
@@ -44,8 +49,10 @@
     "es6-promise": "^4.0.5",
     "html-webpack-plugin": "^2.24.1",
     "ip": "^1.1.4",
+    "istanbul-combine": "git+https://github.com/service-mocker/istanbul-combine.git",
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
+    "karma-coverage": "^1.1.1",
     "karma-firefox-launcher": "^1.0.0",
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.1",
