--- a/package.json
+++ b/package.json
@@ -49,7 +49,6 @@
     "circular-dependency-plugin": "^2.0.0",
     "codecov": "^1.0.1",
     "cross-env": "^3.1.3",
-    "es6-promise": "^4.0.5",
     "html-webpack-plugin": "^2.24.1",
     "ip": "^1.1.4",
     "istanbul-combine": "git+https://github.com/service-mocker/istanbul-combine.git",
@@ -69,6 +68,7 @@
     "mocha-loader": "^1.0.0",
     "npm-run-all": "^3.1.2",
     "rimraf": "^2.5.4",
+    "service-mocker-polyfills": "^1.0.0",
     "source-map-support": "git+https://github.com/service-mocker/node-source-map-support.git",
     "sourcemap-istanbul-instrumenter-loader": "^0.2.0",
     "ts-loader": "^1.3.0",
@@ -78,8 +78,7 @@
     "typescript": "^2.1.4",
     "webpack": "^1.13.3",
     "webpack-dashboard": "^0.2.0",
-    "webpack-dev-server": "^1.16.2",
-    "whatwg-fetch": "^2.0.1"
+    "webpack-dev-server": "^1.16.2"
   },
   "dependencies": {
     "@types/service_worker_api": "0.0.0-next.0",
