add(lint): add eslint

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "typings": "index.d.ts",
   "scripts": {
-    "lint": "tslint -t stylish -e '**/*.d.ts' '{src,test}/**/*.ts'",
+    "lint": "eslint . && tslint -t stylish -e '**/*.d.ts' '{src,test}/**/*.ts'",
     "clean:build": "rimraf ./build",
     "clean:compile": "rimraf ./lib",
     "clean:release": "rimraf ./dist",
@@ -49,6 +49,10 @@
     "circular-dependency-plugin": "^2.0.0",
     "codecov": "^1.0.1",
     "cross-env": "^3.1.3",
+    "eslint": "^3.12.2",
+    "eslint-config-standard": "^6.2.1",
+    "eslint-plugin-promise": "^3.4.0",
+    "eslint-plugin-standard": "^2.0.1",
     "html-webpack-plugin": "^2.24.1",
     "ip": "^1.1.4",
     "istanbul-combine": "git+https://github.com/service-mocker/istanbul-combine.git",
