update(test/ci): list tasks in circle.yml

--- a/circle.yml
+++ b/circle.yml
@@ -4,4 +4,6 @@ machine:
 
 test:
   override:
-    - bash scripts/ci.sh
+    - npm run lint
+    - npm run test:sauce
+    - npm run cover && ./node_modules/.bin/codecov
