--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "release": "FORCE_MOBILE_TEST=true ./scripts/release.sh",
     "start": "node ./scripts/serve.js",
     "pretest": "npm run lint",
-    "test": "npm-run-all --parallel test:modern test:legacy",
-    "test:modern": "cross-env karma --port 9876 start ./scripts/karma.config.dev.js",
-    "test:legacy": "cross-env FORCE_LEGACY=true karma --port 9877 start ./scripts/karma.config.dev.js",
+    "test": "npm-run-all test:modern test:legacy",
+    "test:modern": "cross-env karma start ./scripts/karma.config.dev.js",
+    "test:legacy": "cross-env FORCE_LEGACY=true karma start ./scripts/karma.config.dev.js",
     "test:full": "karma start ./scripts/karma.config.full.js",
     "test:sauce": "karma start ./scripts/karma.config.sauce.js",
     "precover": "npm run clean:cover",
@@ -62,6 +62,7 @@
     "karma-firefox-launcher": "^1.0.0",
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.1",
+    "karma-nyan-reporter": "^0.2.4",
     "karma-remap-coverage": "^0.1.4",
     "karma-remap-istanbul": "^0.4.0",
     "karma-safari-launcher": "^1.0.0",
