chore: rename karma.config.dev -> karma.config.unit

--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "start": "node ./scripts/serve.js",
     "pretest": "npm run lint",
     "test": "npm-run-all test:modern test:legacy",
-    "test:modern": "cross-env karma start ./scripts/karma.config.dev.js",
-    "test:legacy": "cross-env FORCE_LEGACY=true karma start ./scripts/karma.config.dev.js",
+    "test:modern": "cross-env karma start ./scripts/karma.config.unit.js",
+    "test:legacy": "cross-env FORCE_LEGACY=true karma start ./scripts/karma.config.unit.js",
     "test:full": "karma start ./scripts/karma.config.full.js",
     "test:sauce": "karma start ./scripts/karma.config.sauce.js",
     "precover": "npm run clean:cover",
