--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "karma-firefox-launcher": "^1.0.0",
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.1",
-    "karma-nyan-reporter": "^0.2.4",
+    "karma-nyan-reporter": "git+https://github.com/service-mocker/karma-nyan-reporter.git",
     "karma-remap-istanbul": "^0.4.0",
     "karma-safari-launcher": "^1.0.0",
     "karma-sauce-launcher": "^1.1.0",
