--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "eslint-plugin-standard": "^2.0.1",
     "html-webpack-plugin": "^2.24.1",
     "ip": "^1.1.4",
+    "json-loader": "^0.5.4",
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-coverage": "^1.1.1",
@@ -82,8 +83,11 @@
     "@types/service_worker_api": "0.0.0-next.0",
     "@types/whatwg-fetch": "0.0.33",
     "@types/whatwg-streams": "0.0.2",
+    "http-status-codes": "^1.0.6",
     "localforage": "^1.4.3",
-    "tslib": "^1.2.0",
-    "url": "^0.11.0"
+    "mime-component": "0.0.1",
+    "path-to-regexp": "^1.7.0",
+    "qs": "^6.3.0",
+    "tslib": "^1.2.0"
   }
 }
