--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
   "homepage": "https://github.com/idiotWu/service-mocker#readme",
   "devDependencies": {
     "@types/chai": "^3.4.34",
-    "@types/localforage": "0.0.33",
     "@types/mocha": "^2.2.35",
     "@types/node": "^6.0.55",
     "chai": "^3.5.0",
@@ -51,7 +50,6 @@
     "eslint-plugin-standard": "^2.0.1",
     "html-webpack-plugin": "^2.24.1",
     "ip": "^1.1.4",
-    "json-loader": "^0.5.4",
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-coverage": "^1.1.1",
@@ -75,6 +73,7 @@
     "tslint-config-standard": "^2.0.0",
     "tslint-loader": "^3.3.0",
     "typescript": "^2.1.4",
+    "uuid": "^3.0.1",
     "webpack": "^1.13.3",
     "webpack-dashboard": "^0.2.0",
     "webpack-dev-server": "^1.16.2"
