--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
   "typings": "index.d.ts",
   "scripts": {
     "lint": "eslint . && tslint -t stylish {src,test}/**/*.ts",
-    "clean:build": "rimraf ./build",
-    "clean:compile": "rimraf ./lib",
+    "clean:compile": "rimraf ./build",
     "clean:release": "rimraf ./dist",
     "clean:cover": "rimraf ./coverage",
-    "clean": "npm-run-all clean:build clean:compile clean:release clean:cover",
-    "compile": "tsc -p tsconfig.prod.json",
+    "clean": "npm-run-all clean:compile clean:release clean:cover",
+    "copy:src": "cpx './src/**' ./build/src",
+    "copy:conf": "cpx ./tsconfig.json ./build",
+    "precopy": "npm run clean:compile",
+    "copy": "npm-run-all copy:src copy:conf",
+    "precompile": "npm-run-all clean copy",
+    "compile": "tsc -p ./build",
+    "postcompile": "rimraf ./build/tsconfig.json",
     "release": "FORCE_MOBILE_TEST=true ./scripts/release.sh",
     "start": "node ./scripts/serve.js",
     "pretest": "npm run lint",
@@ -43,6 +48,7 @@
     "chai": "^3.5.0",
     "circular-dependency-plugin": "^2.0.0",
     "codecov": "^1.0.1",
+    "cpx": "^1.5.0",
     "cross-env": "^3.1.3",
     "eslint": "^3.12.2",
     "eslint-config-standard": "^6.2.1",
