--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "http-status-codes": "^1.0.6",
     "localforage": "^1.4.3",
     "mime-component": "0.0.1",
+    "object-assign": "^4.1.0",
     "path-to-regexp": "^1.7.0",
     "qs": "^6.3.0",
     "tslib": "^1.2.0"
