add(docs): add landing page

--- a/.eslintrc
+++ b/.eslintrc
@@ -9,5 +9,8 @@
     "semi": [2, "always"],
     "comma-dangle": [2, "always-multiline"],
     "space-before-function-paren": [2, { "anonymous": "always", "named": "never" }]
+  },
+  "globals": {
+    "WebFont": true
   }
 }
