--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "test:full": "karma start ./scripts/karma.config.full.js",
     "test:sauce": "karma start ./scripts/karma.config.sauce.js",
     "precover": "npm run clean:cover",
-    "cover": "karma start ./scripts/karma.config.cover.js"
+    "cover": "karma start ./scripts/karma.config.cover.js",
+    "doc": "docute -w ./docs"
   },
   "repository": {
     "type": "git",
@@ -50,6 +51,7 @@
     "codecov": "^1.0.1",
     "cpx": "^1.5.0",
     "cross-env": "^3.1.3",
+    "docute-cli": "^0.4.0",
     "eslint": "^3.12.2",
     "eslint-config-standard": "^6.2.1",
     "eslint-plugin-promise": "^3.4.0",
