--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "service-mocker",
   "version": "0.0.1",
-  "description": "Next generation api mocker.",
+  "description": "The next generation front-end API mocking framework.",
   "main": "index.js",
   "typings": "index.d.ts",
   "scripts": {
