fix(ts): separate client and server compilation

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "precopy": "npm run clean:compile",
     "copy": "npm-run-all copy:src copy:conf",
     "precompile": "npm-run-all clean copy",
-    "compile": "tsc -p ./build",
+    "compile": "cd ./build && ../node_modules/.bin/tsc",
     "postcompile": "rimraf ./build/tsconfig.json",
     "release": "FORCE_MOBILE_TEST=true ./scripts/release.sh",
     "start": "node ./scripts/serve.js",
@@ -80,19 +80,16 @@
     "rimraf": "^2.5.4",
     "service-mocker-polyfills": "^1.0.0",
     "source-map-support": "git+https://github.com/service-mocker/node-source-map-support.git",
-    "ts-loader": "^1.3.0",
+    "ts-loader": "^2.0.3",
     "tslint": "^4.0.2",
     "tslint-config-standard": "^2.0.0",
     "tslint-loader": "^3.3.0",
-    "typescript": "^2.1.4",
+    "typescript": "^2.2.1",
     "uuid": "^3.0.1",
     "webpack": "^2.2.0",
     "webpack-dev-server": "^2.2.0"
   },
   "dependencies": {
-    "@types/service_worker_api": "0.0.0-next.0",
-    "@types/whatwg-fetch": "0.0.33",
-    "@types/whatwg-streams": "0.0.2",
     "mime-component": "0.0.1",
     "path-to-regexp": "^1.7.0",
     "qs": "^6.3.0",
