Typescript compatibility check (#28)
* style(.eslintrc): add indent rule for switch-case

* feat: typescript compatibility check

* deps: change typescript to ~2.1.4

* fix(version-map): fix format

* fix(version-check): remove `npm ls` command

* style(version-check): remove useless flag

* fix(version-check): fix conditions

* chore(version-check): update output format

* chore(version-check): only print compatibility list on fails

* chore(version-check): remove useless statement

* refact: rearrange files

* add(ts-compat): add readme

* fix(ts-compat): fix entries

* docs(ts-compat/readme): fix typo

* update(ts-compat): remove checking message

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "typings": "index.d.ts",
   "scripts": {
+    "postinstall": "node ts-compat/check.js",
     "lint": "eslint . && tslint -t stylish {src,test}/**/*.ts",
     "clean:compile": "rimraf ./build",
     "clean:release": "rimraf ./dist",
@@ -84,7 +85,7 @@
     "tslint": "^4.0.2",
     "tslint-config-standard": "^2.0.0",
     "tslint-loader": "^3.3.0",
-    "typescript": "^2.1.4",
+    "typescript": "~2.1.4",
     "uuid": "^3.0.1",
     "webpack": "^2.2.0",
     "webpack-dev-server": "^2.2.0"
