fix(tsc): use two tsc instances for client and server compilation

--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "precopy": "npm run clean:compile",
     "copy": "npm-run-all copy:src copy:conf",
     "precompile": "npm-run-all clean copy",
-    "compile": "cd ./build && ../node_modules/.bin/tsc",
-    "postcompile": "rimraf ./build/tsconfig.json",
+    "compile": "tsc -p ./build/src/client && tsc -p ./build/src/server",
+    "postcompile": "rimraf ./build/**/tsconfig.json",
     "release": "FORCE_MOBILE_TEST=true ./scripts/release.sh",
     "start": "node ./scripts/serve.js",
     "pretest": "npm run lint",
