--- a/package.json
+++ b/package.json
@@ -56,11 +56,13 @@
     "cpx": "^1.5.0",
     "cross-env": "^3.1.3",
     "docute-cli": "^0.4.0",
-    "eslint": "^3.12.2",
-    "eslint-config-standard": "^6.2.1",
+    "eslint": "^3.19.0",
+    "eslint-config-standard": "^10.2.1",
     "eslint-loader": "^1.7.1",
-    "eslint-plugin-promise": "^3.4.0",
-    "eslint-plugin-standard": "^2.0.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-node": "^4.2.2",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^3.0.1",
     "html-webpack-plugin": "^2.26.0",
     "ip": "^1.1.4",
     "istanbul-instrumenter-loader": "^1.2.0",
