ci(coverage): switch to `babel-plugin-istanbul`
`istanbul-instrumenter-loader` uses deprecated
`istanbul-lib-instrument`, which has been repaced with `istanbuljs`.
So we switch to use `babel-plugin-istanbul` which uses `istanbuljs`.

--- a/.babelrc
+++ b/.babelrc
@@ -14,5 +14,10 @@
         "browsers": ["> 1%", "last 2 versions", "safari >= 8", "IE >= 10"]
       }
     }]
-  ]
+  ],
+  "env": {
+    "cover": {
+      "plugins": ["istanbul"]
+    }
+  }
 }
