--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test:full": "karma start ./scripts/karma.config.full.js",
     "test:sauce": "karma start ./scripts/karma.config.sauce.js",
     "precover": "npm run clean:cover",
-    "cover": "karma start ./scripts/karma.config.cover.js",
+    "cover": "cross-env NODE_ENV=cover karma start ./scripts/karma.config.cover.js",
     "doc": "docute -w ./docs"
   },
   "repository": {
@@ -47,6 +47,7 @@
     "babel-core": "^6.24.1",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.0.0",
+    "babel-plugin-istanbul": "^4.1.3",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.4.0",
@@ -54,7 +55,7 @@
     "circular-dependency-plugin": "^2.0.0",
     "codecov": "^1.0.1",
     "cpx": "^1.5.0",
-    "cross-env": "^3.1.3",
+    "cross-env": "^4.0.0",
     "docute-cli": "^0.4.0",
     "eslint": "^3.19.0",
     "eslint-config-standard": "^10.2.1",
@@ -65,14 +66,12 @@
     "eslint-plugin-standard": "^3.0.1",
     "html-webpack-plugin": "^2.26.0",
     "ip": "^1.1.4",
-    "istanbul-instrumenter-loader": "^1.2.0",
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-coverage": "^1.1.1",
     "karma-firefox-launcher": "^1.0.0",
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.2",
-    "karma-remap-istanbul": "^0.3.2",
     "karma-safari-launcher": "^1.0.0",
     "karma-sauce-launcher": "^1.1.0",
     "karma-sourcemap-loader": "^0.3.7",
