--- a/circle.yml
+++ b/circle.yml
@@ -6,4 +6,5 @@ test:
   override:
     - npm run lint
     - npm run test:sauce
+    - npm run test:typings
     - npm run cover && ./node_modules/.bin/codecov
