chore(npm scripts): update test scripts

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "release": "cross-env FORCE_MOBILE_TEST=true ./scripts/release.sh",
     "start": "node ./scripts/serve.js",
     "pretest": "npm run lint",
-    "test": "karma start ./scripts/karma.config.unit.js",
+    "test": "npm-run-all --parallel test:unit test:typings",
+    "test:unit": "karma start ./scripts/karma.config.unit.js",
     "test:full": "karma start ./scripts/karma.config.full.js",
     "test:sauce": "karma start ./scripts/karma.config.sauce.js",
     "test:typings": "tsc -p ./typings/test",
