ci(circle): fix cache

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,6 +30,8 @@ jobs:
       - run: npm install
       - save_cache:
           <<: *cache_key
+          paths:
+            - node_modules/
       - persist_to_workspace:
           root: *workspace_root
           paths:
