--- a/package.json
+++ b/package.json
@@ -96,5 +96,8 @@
     "path-to-regexp": "^1.7.0",
     "qs": "^6.4.0",
     "statuses": "^1.3.1"
+  },
+  "engines": {
+    "node": ">=10.0"
   }
 }
