--- a/.babelrc
+++ b/.babelrc
@@ -1,14 +1,13 @@
 {
   "plugins": [
-    "transform-class-properties",
-    ["transform-runtime", {
+    "@babel/plugin-proposal-class-properties",
+    ["@babel/plugin-transform-runtime", {
       "helpers": false,
-      "polyfill": false,
       "regenerator": true
     }]
   ],
   "presets": [
-    ["env", {
+    ["@babel/env", {
       "loose": true,
       "targets": {
         "browsers": ["> 1%", "last 2 versions", "safari >= 8", "IE >= 10"]
