--- a/package.json
+++ b/package.json
@@ -46,14 +46,14 @@
   },
   "homepage": "https://github.com/service-mocker/service-mocker#readme",
   "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.24.1",
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.5",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-transform-runtime": "^7.4.4",
+    "@babel/preset-env": "^7.4.5",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.0.0",
     "babel-plugin-istanbul": "^4.1.3",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.4.0",
     "chai": "^3.5.0",
     "circular-dependency-plugin": "^3.0.0",
     "codecov": "^2.1.0",
@@ -91,7 +91,7 @@
     "webpack-dev-server": "^2.2.0"
   },
   "dependencies": {
-    "babel-runtime": "^6.23.0",
+    "@babel/runtime": "^7.4.5",
     "mime-component": "0.0.1",
     "path-to-regexp": "^1.7.0",
     "qs": "^6.4.0",
