--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "precompile": "npm-run-all clean copy",
     "compile": "babel ./build/src -s -d ./build",
     "release": "cross-env FORCE_MOBILE_TEST=true ./scripts/release.sh",
-    "start": "node ./scripts/serve.js",
+    "start": "webpack-dev-server --open --config ./scripts/webpack.config.dev.js",
     "pretest": "npm run lint",
     "test": "npm-run-all --parallel test:unit test:typings",
     "test:unit": "karma start ./scripts/karma.config.unit.js",
@@ -52,23 +52,22 @@
     "@babel/plugin-transform-runtime": "^7.4.4",
     "@babel/preset-env": "^7.4.5",
     "babel-eslint": "^10.0.1",
-    "babel-loader": "^7.0.0",
+    "babel-loader": "^8.0.6",
     "babel-plugin-istanbul": "^4.1.3",
     "chai": "^3.5.0",
-    "circular-dependency-plugin": "^3.0.0",
+    "circular-dependency-plugin": "^5.0.2",
     "codecov": "^2.1.0",
     "cpx": "^1.5.0",
     "cross-env": "^4.0.0",
     "docute-cli": "^0.4.0",
     "eslint": "^5.16.0",
     "eslint-config-standard": "^12.0.0",
-    "eslint-loader": "^1.7.1",
+    "eslint-loader": "^2.1.2",
     "eslint-plugin-import": "^2.17.3",
     "eslint-plugin-node": "^9.1.0",
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-standard": "^4.0.0",
-    "html-webpack-plugin": "^2.26.0",
-    "ip": "^1.1.4",
+    "html-webpack-plugin": "^3.2.0",
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-coverage": "^1.1.1",
@@ -79,16 +78,17 @@
     "karma-sauce-launcher": "^1.1.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^2.0.1",
-    "mocha": "^3.2.0",
-    "mocha-loader": "^1.0.0",
+    "mocha": "^6.1.4",
+    "mocha-loader": "^2.0.1",
     "npm-run-all": "^4.0.2",
     "rimraf": "^2.5.4",
     "service-mocker-polyfills": "^1.1.3",
     "source-map-support": "git+https://github.com/service-mocker/node-source-map-support.git",
     "typescript": "^2.3.2",
     "uuid": "^3.0.1",
-    "webpack": "^2.2.0",
-    "webpack-dev-server": "^2.2.0"
+    "webpack": "^4.32.2",
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-server": "^3.4.1"
   },
   "dependencies": {
     "@babel/runtime": "^7.4.5",
