--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "@babel/preset-env": "^7.4.5",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.6",
-    "babel-plugin-istanbul": "^4.1.3",
+    "babel-plugin-istanbul": "^5.1.4",
     "chai": "^3.5.0",
     "circular-dependency-plugin": "^5.0.2",
     "codecov": "^2.1.0",
@@ -68,16 +68,16 @@
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-standard": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
-    "karma": "^1.3.0",
+    "karma": "^4.1.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-coverage": "^1.1.1",
     "karma-firefox-launcher": "^1.0.0",
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.2",
     "karma-safari-launcher": "^1.0.0",
-    "karma-sauce-launcher": "^1.1.0",
+    "karma-sauce-launcher": "^2.0.2",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^2.0.1",
+    "karma-webpack": "v4.0.0-rc.6",
     "mocha": "^6.1.4",
     "mocha-loader": "^2.0.1",
     "npm-run-all": "^4.0.2",
